<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.ieltspreparation.presentation.dashboard.VocabularyDetailsFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_11"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/saveTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{model.actionUpdateVocabulary}"
                    android:text="@string/edite"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerOne">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Vocabulary details"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTv">


                    <TextView
                        android:id="@+id/EWordTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/english_word"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container1">

                    <TextView
                        android:id="@+id/BWordTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/bengali_meaning"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/synonymTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:paddingTop="@dimen/padding_7"
                    android:text="@string/synonym_word"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/text_size_20"
                    app:layout_constraintTop_toBottomOf="@+id/container2" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_11"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/synonymTv">

                    <TextView
                        android:id="@+id/priceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/synonym_one"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container3">

                    <TextView
                        android:id="@+id/dateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/synonym_two"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/antonymTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_45"
                    android:paddingTop="@dimen/padding_7"
                    android:text="@string/antonym_word"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/text_size_20"
                    app:layout_constraintTop_toBottomOf="@+id/container4" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/antonymTv">

                    <TextView
                        android:id="@+id/selfTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/antonym_one"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container5">

                    <TextView
                        android:id="@+id/rowTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/antonym_two"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>